<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wardrobe_Manager1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Login">Login</string>
    <string name="Passward">Passward</string>
    <string name="Username">Username:</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <string name="usernameid">usernameID</string>
    <string name="password">Password</string>
    <string name="_id_textview3">\@+id/textView3</string>
    <string name="_android_attr_textappearancemedium">\?android:attr/textAppearanceMedium</string>
    <string name="username">Username:</string>
    <string name="testpass">testpass</string>
    <string name="e_closet">E-Closet</string>
    <string name="Remeber_me">Remeber me</string>
    <string name="create_new_account">create new account</string>
    <string name="dont_have_an_account_yet_">Dont have an account yet?</string>
    <string name="E_Closet">E Closet</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email Id</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="enter">Enter</string>
    <string name="logout">Logout</string>
    <string name="Logout">Logout</string>
    <string name="plus_sign">plus_sign</string>
    <string name="home">home</string>
    <string name="Username_id">Username id</string>
    <string name="Password_1">Password</string>
    <string name="authenticatelogin">Login</string>
    <string name="password_p">Password:</string>
    <string name="attempts_left_">Attempts Left:</string>
    <string name="registration_form">Registration Form</string>
    <string name="Retype_Password">Retype Password</string>
    <string name="closet">Closet</string>
    <string name="calender">calender</string>
    <string name="Packing">Packing</string>
    <string name="help">help</string>
    <string name="log_out">Log out</string>
    <string name="add_item">Add item</string>
    <string name="Title">Title</string>
    <string name="Add_new_item">Add New Item</string>
    <string name="season">Season</string>
    <string name="Item_View">Item View</string>
    <string name="Dress_code">Dress Code</string>
    <string name="Location">Location</string>
    <string name="Date_of_Purchase">Date of Purchase</string>
    <string name="colour">Colour</string>
    <string name="Brand">Brand</string>
    <string name="last_access_date">Last Access Date</string>
    <string name="Add_item">Add item</string>
    <string name="closet_inventory">Closet Inventory</string>
    <string name="clothes">Clothes</string>
    <string name="accessories">Accessories</string>
    <string name="bags">Bags</string>
    <string name="footwear">Footwear</string>
    <string name="inventory">invetory</string>
    <string name="item_code">Item Code</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="undo">Undo</string>
    <string name="done">Done</string>
    <string name="Done">Done</string>
    <string name="you_have_successfully_deleted">you have successfully deleted</string>
    <string name="Pre_plan_an_outfit_for_an_occasion">Pre-plan an outfit for an occasion</string>
    <string name="Select_serach_criteria">Select serach criteria</string>
    <string name="Search_based_on_color_and_dress_code">Search based on color and dress code</string>
    <string name="select_color">select color</string>
    <string name="select_dress_code">Select dress code</string>
    <string name="Search">Search</string>
    <string name="search_results">Search results</string>
    <string name="color_category">Color catagory</string>
    <string name="dress_code">Dress code</string>
    <string name="packing">packing</string>
    <string name="create_a_brand_new_packing_list">Create a brand new packing list</string>
    <string name="for_your_next_adventure">For your next adventure</string>
    <string name="Create_new">Create new</string>
    <string name="enter_creteria_for_suggest_outfit">Enter criteria for suggest outfit</string>
    <string name="Temperature">Temperature</string>
    <string name="temp1">-10 to 0 Degree</string>
    <string name="temp2">0 to 10 Degree</string>
    <string name="temp3">10 to 20 Degree</string>
    <string name="temp4">20 to 30 Degree</string>
    <string name="rain">Rain</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Wind">Wind</string>
    <string name="Light_breeze">Light Breeze( 0 - 10km/hr)</string>
    <string name="Moderate_breeze">Moderate Breeze (10-30km/hr)</string>
    <string name="strong_gale">Strong Gale ( 30-70 km/hr)</string>
    <string name="storm">Storm ( 70-100 km/hr)</string>
    <string name="Proceed">Proceed</string>
    <string name="pdf">"Packing list is completed "</string>
    <string name="icon">Select icon to download the list to the device</string>
    <string name="Help">Help</string>
    <string name="search">search</string>
    <string name="quick_tour">Watch the quick tour of the WardrobeManager here!</string>
    <string name="delete_item">How to delete an item?</string>
    <string name="click_inventory">Click an inventory</string>
    <string name="select_item">Select Item you wish to del</string>
    <string name="click_button">Click on delete button</string>
    <string name="select_yes">Select Yes from the alert!</string>
    <string name="loggedout">you have successfully logged out!</string>
    <string name="go_back">Go back to Home Page</string>
    <string name="technology">software applications technology</string>
    <string name="Tips">TextView</string>
    <string name="tips">tips</string>
    <string name="Tools">Tools</string>
    <string name="tools_android">tools  android</string>
    <string name="travels_Blogs">travels Blogs</string>
    <string name="Articles">Articles</string>
    <string name="mobile">mobile</string>
    <string name="twitter">twitter</string>
    <string name="googleStore">googleStore</string>
    <string name="Eclipse">Eclipse</string>
    <string name="usability">Usability</string>
    <string name="style_fashion_visualization">style fashion visualization</string>
    <string name="platforms">platforms 2.0 web design webdev</string>
    <string name="calendars">Calendars outfits shopping</string>
    <string name="Weltec">Weltec</string>
    <string name="all_right_reserved">\@ all right reserved</string>
    <string name="project_by">A Project by team AGST</string>
    <string name="Forgot_password">Forgot password</string>
    <string name="dont_have_account">Don\'t have an account yet?</string>
    <string name="get_started">Get Started!</string>
    <string name="create_an_account">Create an account</string>
    <string name="Remember_me">Remember me</string>

</resources>
