<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/AbsoluteLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="116dp"
        android:layout_y="12dp"
        android:text="@string/E_Closet"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="16dp"
        android:layout_height="15dp"
        android:layout_x="22dp"
        android:layout_y="19dp"
        android:contentDescription="@string/plus_sign"
        android:src="@drawable/plus_sign" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="254dp"
        android:layout_y="14dp"
        android:text="@string/Logout"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
      <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="197dp"
        android:layout_y="407dp"
        android:src="@drawable/packing_icon" android:contentDescription="packing"/>

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="70dp"
        android:layout_y="401dp"
        android:src="@drawable/box_icon" android:contentDescription="box"/>

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="258dp"
        android:layout_y="406dp"
        android:src="@drawable/icon_help" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="9dp"
        android:layout_y="403dp"
        android:contentDescription="@string/home"
        android:src="@drawable/home_icon" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="133dp"
        android:layout_y="403dp"
        android:contentDescription="calender"
        android:src="@drawable/calendar_month" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:layout_x="112dp"
        android:layout_y="53dp"
        android:text="@string/packing"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="26dp"
        android:layout_y="83dp"
        android:text="@string/enter_creteria_for_suggest_outfit" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="35dp"
        android:layout_y="102dp"
        android:text="@string/Temperature" />

    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="43dp"
        android:layout_y="118dp"
        android:text="@string/temp1" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="43dp"
        android:layout_y="138dp"
        android:text="@string/temp2" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="44dp"
        android:layout_y="161dp"
        android:text="@string/temp3" />

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="46dp"
        android:layout_y="183dp"
        android:text="@string/temp4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="39dp"
        android:layout_y="209dp"
        android:text="@string/rain" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="36dp"
        android:layout_y="280dp"
        android:text="@string/Wind" />

    <RadioButton
        android:id="@+id/radioButton7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="49dp"
        android:layout_y="294dp"
        android:text="@string/Light_breeze" />

    <RadioButton
        android:id="@+id/radioButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="43dp"
        android:layout_y="220dp"
        android:text="@string/yes" />

    <RadioButton
        android:id="@+id/radioButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="44dp"
        android:layout_y="244dp"
        android:text="@string/no" />

    <RadioButton
        android:id="@+id/radioButton8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="50dp"
        android:layout_y="317dp"
        android:text="@string/Moderate_breeze" />

    <RadioButton
        android:id="@+id/radioButton9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="50dp"
        android:layout_y="339dp"
        android:text="@string/strong_gale" />

    <RadioButton
        android:id="@+id/radioButton10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="49dp"
        android:layout_y="361dp"
        android:text="@string/storm" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_x="160dp"
        android:layout_y="384dp"
        android:text="@string/Proceed" />

