<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/AbsoluteLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="116dp"
        android:layout_y="12dp"
        android:text="@string/E_Closet"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="16dp"
        android:layout_height="15dp"
        android:layout_x="22dp"
        android:layout_y="19dp"
        android:contentDescription="@string/plus_sign"
        android:src="@drawable/plus_sign" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="254dp"
        android:layout_y="14dp"
        android:text="@string/Logout"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
      <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="197dp"
        android:layout_y="407dp"
        android:src="@drawable/packing_icon" android:contentDescription="@string/packing"/>

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="70dp"
        android:layout_y="401dp"
        android:src="@drawable/box_icon" android:contentDescription="box"/>

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="258dp"
        android:layout_y="406dp"
        android:src="@drawable/icon_help" android:contentDescription="@string/help"/>

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="9dp"
        android:layout_y="403dp"
        android:contentDescription="@string/home"
        android:src="@drawable/home_icon" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="133dp"
        android:layout_y="403dp"
        android:contentDescription="@string/calender"
        android:src="@drawable/calendar_month" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="128dp"
        android:layout_y="48dp"
        android:text="@string/Help"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SearchView
        android:id="@+id/searchView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="214dp"
        android:layout_y="72dp" >
    </SearchView>

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="15dp"
        android:layout_y="76dp"
        android:ems="10"
        android:text="@string/search" >

        <requestFocus />
    </AutoCompleteTextView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="15dp"
        android:layout_y="126dp"
        android:text="@string/quick_tour" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="24dp"
        android:layout_y="261dp"
        android:text="@string/delete_item" />

    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="9dp"
        android:layout_y="286dp"
        android:text="@string/click_inventory" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="9dp"
        android:layout_y="311dp"
        android:text="@string/select_item" />

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="9dp"
        android:layout_y="356dp"
        android:text="@string/select_yes" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="7dp"
        android:layout_y="335dp"
        android:text="@string/click_button" />

