<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AbsoluteLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wardrobemanager.MainActivity"
    tools:ignore="Deprecated" >

    <TextView
        android:id="@+id/loginLockedTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_x="16dp"
        android:layout_y="191dp"
        android:ems="10"
        android:hint="@string/Password_1"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="12dp"
        android:layout_y="170dp"
        android:text="@string/password_p"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/numberOfRemainingLoginAttemptsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="51dp"
        android:layout_y="268dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/attemptsLeftTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="188dp"
        android:layout_y="268dp"
        android:text="@string/attempts_left_"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="81dp"
        android:layout_y="339dp"
        android:text="@string/dont_have_account" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="110dp"
        android:layout_y="366dp"
        android:text="@string/get_started"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="83dp"
        android:layout_y="388dp"
        android:text="@string/create_an_account" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="114dp"
        android:layout_y="10dp"
        android:text="@string/E_Closet"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="16dp"
        android:layout_y="78dp"
        android:text="@string/Username"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/usernameET"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_x="3dp"
        android:layout_y="112dp"
        android:ems="10"
        android:hint="@string/Username_id" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="203dp"
        android:layout_y="246dp"
        android:onClick="@string/authenticatelogin"
        android:text="@string/Login" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="109dp"
        android:layout_y="322dp"
        android:text="@string/Forgot_password" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="8dp"
        android:layout_y="264dp"
        android:text="@string/Remember_me" />

</AbsoluteLayout>
