<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/AbsoluteLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="116dp"
        android:layout_y="12dp"
        android:text="@string/E_Closet"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="16dp"
        android:layout_height="15dp"
        android:layout_x="22dp"
        android:layout_y="19dp"
        android:contentDescription="@string/plus_sign"
        android:src="@drawable/plus_sign" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="254dp"
        android:layout_y="14dp"
        android:text="@string/Logout"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
      <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="197dp"
        android:layout_y="407dp"
        android:src="@drawable/packing_icon" android:contentDescription="packing"/>

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="70dp"
        android:layout_y="401dp"
        android:src="@drawable/box_icon" android:contentDescription="box"/>

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="258dp"
        android:layout_y="406dp"
        android:src="@drawable/icon_help" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="9dp"
        android:layout_y="403dp"
        android:contentDescription="@string/home"
        android:src="@drawable/home_icon" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="133dp"
        android:layout_y="403dp"
        android:contentDescription="calender"
        android:src="@drawable/calendar_month" />

    
    <TextView
       android:id="@+id/textView3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_x="111dp"
       android:layout_y="58dp"
       android:text="@string/calender"
       android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="38dp"
        android:layout_y="111dp"
        android:text="@string/search_results" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_x="136dp"
        android:layout_y="343dp"
        android:text="@string/done" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="35dp"
        android:layout_y="138dp"
        android:text="@string/color_category" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="38dp"
        android:layout_y="157dp"
        android:text="@string/dress_code" />
    
</AbsoluteLayout>
